# app/static/onecity_v1/swagger.json
@@ -27,12 +27,11 @@
   },
   "security": [
     {
-      "ApiSecurity": []
+      "APIToken": []
     }
   ],
   "definitions": {
     "ApiResponse": {
-      "type": "object",
       "properties": {
         "error_code": {
           "type": "integer"
@@ -61,44 +60,35 @@
     }
   },
   "paths": {
-    "/users": {
+    "/register": {
       "post": {
         "tags": [
-          "\u6d4b\u8bd5"
+          "\u7528\u6237"
         ],
-        "summary": "\u6d4b\u8bd5\u7528\u6237\u5217\u8868",
+        "summary": "\u6ce8\u518c\u65b0\u7528\u6237",
+        "security": [],
         "parameters": [
           {
-            "name": "video",
+            "name": "user",
             "in": "body",
-            "description": "\u6d4b\u8bd5\u53c2\u8d5b",
+            "descriptiom": "\u521b\u5efa\u7528\u6237",
             "schema": {
-              "required": [
-                "lastName"
-              ],
               "properties": {
-                "firstName": {
-                  "type": "string"
+                "nickname": {
+                  "type": "string",
+                  "minLength": 2,
+                  "maxLength": 16
                 },
-                "lastName": {
-                  "type": "string"
+                "password": {
+                  "type": "string",
+                  "pattern": "^[A-Za-z0-9_*&$#@]{6,22}$",
+                  "minLength": 6,
+                  "maxLength": 24
                 }
               }
             }
           }
         ],
-        "description": "\u63cf\u8ff0",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "\u83b7\u53d6\u7528\u6237\u5217\u8868"
-        ],
-        "summary": "\u6d4b\u8bd5\u8fd4\u56de\u6570\u636e",
         "responses": {
           "200": {
             "description": "\u64cd\u4f5c\u6210\u529f",
@@ -106,8 +96,8 @@
               "$ref": "#/definitions/ApiResponse"
             }
           },
-          "400": {
-            "description": "\u8bf7\u6c42\u6210\u529f\uff0c\u4f46\u662f\u4e1a\u52a1\u5931\u8d25",
+          "default": {
+            "description": "\u64cd\u4f5c\u5f02\u5e38,\u6267\u884c\u5931\u8d25.\u8fd4\u56de\u4fe1\u606f\u63cf\u8ff0\u9519\u8bef\u8be6\u60c5",
             "schema": {
               "$ref": "#/definitions/ErrorResponse"
             }
